--- a/TheFoodHubMVC/Views/Orders/Create.cshtml
+++ b/TheFoodHubMVC/Views/Orders/Create.cshtml
@@ -2,12 +2,23 @@
 
 @{
     ViewData["Title"] = "Create";
+    Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
+
 }
 
-<h1>Create</h1>
+<main id="main" class="main">
 
-<h4>Order</h4>
-<hr />
+    <div class="pagetitle">
+        <h1>Create Order</h1>
+        <nav>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Index">Home</a></li>
+                <li class="breadcrumb-item active">Create Order</li>
+            </ol>
+        </nav>
+    </div><!-- End Page Title -->
+
+    <section class="section profile">
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -36,7 +47,8 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
+</section>
+</main>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
