--- a/TheFoodHubMVC/Views/Orders/Edit.cshtml
+++ b/TheFoodHubMVC/Views/Orders/Edit.cshtml
@@ -2,12 +2,21 @@
 
 @{
     ViewData["Title"] = "Edit";
+    Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
 }
+<main id="main" class="main">
 
-<h1>Edit</h1>
+    <div class="pagetitle">
+        <h1>View Order</h1>
+        <nav>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Index">Home</a></li>
+                <li class="breadcrumb-item active">View Order</li>
+            </ol>
+        </nav>
+    </div><!-- End Page Title -->
 
-<h4>Order</h4>
-<hr />
+    <section class="section profile">
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
@@ -38,7 +47,8 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
+    </section>
+</main>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
