--- a/TheFoodHubMVC/Views/Orders/Delete.cshtml
+++ b/TheFoodHubMVC/Views/Orders/Delete.cshtml
@@ -2,14 +2,22 @@
 
 @{
     ViewData["Title"] = "Delete";
+    Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
+
 }
+<main id="main" class="main">
 
-<h1>Delete</h1>
+    <div class="pagetitle">
+        <h1>Delete Order</h1>
+        <nav>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Index">Home</a></li>
+                <li class="breadcrumb-item active">Delete Order</li>
+            </ol>
+        </nav>
+    </div><!-- End Page Title -->
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Order</h4>
-    <hr />
+    <section class="section profile">
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.OrderTotal)
@@ -36,4 +44,6 @@
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
-</div>
+
+    </section>
+</main>
