--- a/TheFoodHubMVC/Views/ProductCategories/Delete.cshtml
+++ b/TheFoodHubMVC/Views/ProductCategories/Delete.cshtml
@@ -1,15 +1,27 @@
 ﻿@model TheFoodHubMVC.Models.ProductCategory
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Category";
+    Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
+
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>ProductCategory</h4>
-    <hr />
+<main id="main" class="main">
+    <div class="pagetitle">
+        <h1>Delete Category</h1>
+        <nav>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Index">Home</a></li>
+                <li class="breadcrumb-item active">Delete Category</li>
+            </ol>
+        </nav>
+    </div><!-- End Page Title -->
+
+    <section class="section profile">
+
+     <h4>Are you sure you want to delete this?</h4>
+ 
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CategoryName)
@@ -22,6 +34,12 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="CategoryId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
     </form>
-</div>
+        <p>
+            <a asp-action="Index">
+                <button type="button" class="btn btn-outline-primary">Back</button>
+            </a>
+        </p>
+
+    </section>
+</main>
