--- a/TheFoodHubMVC/Views/Products/Delete.cshtml
+++ b/TheFoodHubMVC/Views/Products/Delete.cshtml
@@ -2,14 +2,22 @@
 
 @{
     ViewData["Title"] = "Delete";
+    Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
 }
 
-<h1>Delete</h1>
+<main id="main" class="main">
+    <div class="pagetitle">
+        <h1>Delete Product</h1>
+        <nav>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Index">Home</a></li>
+                <li class="breadcrumb-item active">Delete Product</li>
+            </ol>
+        </nav>
+    </div><!-- End Page Title -->
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Product</h4>
-    <hr />
+    <section class="section profile">
+
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ProductName)
@@ -29,12 +37,6 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Quantity)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductPicture)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductPicture)
-        </dd>
     </dl>
     
     <form asp-action="Delete">
@@ -42,4 +44,5 @@
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
-</div>
+    </section>
+</main>
