--- a/TheFoodHubMVC/Views/Products/Index.cshtml
+++ b/TheFoodHubMVC/Views/Products/Index.cshtml
@@ -2,12 +2,27 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
+
 }
 
-<h1>Index</h1>
+<main id="main" class="main">
+    
+    <div class="pagetitle">
+        <h1>Products</h1>
+        <nav>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Index">Home</a></li>
+                <li class="breadcrumb-item active">Products</li>
+            </ol>
+        </nav>
+    </div><!-- End Page Title -->
+
+    <section class="section profile">
+
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New Product</a>
 </p>
 <table class="table">
     <thead>
@@ -21,9 +36,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Quantity)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ProductPicture)
-            </th>
+
             <th></th>
         </tr>
     </thead>
@@ -40,9 +53,6 @@
                 @Html.DisplayFor(modelItem => item.Quantity)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ProductPicture)
-            </td>
-            <td>
                 <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.ProductId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.ProductId">Delete</a>
@@ -51,3 +61,6 @@
 }
     </tbody>
 </table>
+
+    </section>
+</main>
