--- a/TheFoodHubMVC/Views/Shared/_LayoutDashboard.cshtml
+++ b/TheFoodHubMVC/Views/Shared/_LayoutDashboard.cshtml
@@ -40,7 +40,7 @@
   <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a asp-controller="Dashboard" asp-action="Index" class="logo d-flex align-items-center">
         <span class="d-none d-lg-block">TheFoodHub</span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
@@ -81,29 +81,29 @@
                     <span>Dashboard</span>
                 </a>
             </li><!-- End Dashboard Nav -->
-
+@*
             <li class="nav-item">
                 <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
                     <i class="bi bi-people-fill"></i><span>Staffs</span><i class="bi bi-chevron-down ms-auto"></i>
                 </a>
                 <ul id="components-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
                     <li>
-                        <a href="components-alerts.html">
+                        <a asp-controller="" asp-action="">
                             <i class="bi bi-person-add"></i><span>Add New Staff</span>
                         </a>
                     </li>
                     <li>
-                        <a href="components-accordion.html">
+                        <a asp-controller="" asp-action="">
                             <i class="bi bi-person-lines-fill"></i><span>All Staffs</span>
                         </a>
                     </li>
                     <li>
-                        <a href="components-accordion.html">
+                        <a asp-controller="" asp-action="">
                             <i class="bi bi-person-gear"></i><span>Pending Staff</span>
                         </a>
                     </li>
                 </ul>
-            </li><!-- End Staffs Nav -->
+            </li><!-- End Staffs Nav -->*@
 
             <li class="nav-item">
                 <a class="nav-link collapsed" data-bs-target="#components-nav1" data-bs-toggle="collapse" href="#">
@@ -111,7 +111,7 @@
                 </a>
                 <ul id="components-nav1" class="nav-content collapse" data-bs-parent="#sidebar-nav">
                     <li>
-                        <a href="components-alerts.html">
+                        <a asp-controller="ProductCategories" asp-action="Index">
                             <i class="bi bi-basket"></i><span>Categories</span>
                         </a>
                     </li>
@@ -126,7 +126,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="components-badges.html">
+                        <a asp-controller="ProductStocks" asp-action="Index">
                             <i class="bi bi-basket-fill"></i><span>Load Stock</span>
                         </a>
                     </li>
@@ -139,12 +139,12 @@
                 </a>
                 <ul id="components-nav2" class="nav-content collapse" data-bs-parent="#sidebar-nav">
                     <li>
-                        <a href="charts-chartjs.html">
+                        <a asp-controller="Orders" asp-action="Create">
                             <i class="bi bi-cart-plus"></i><span>Make An Order</span>
                         </a>
                     </li>
                     <li>
-                        <a href="charts-apexcharts.html">
+                        <a asp-controller="Orders" asp-action="Index">
                             <i class="bi bi-book"></i><span>Order History</span>
                         </a>
                     </li>
@@ -152,13 +152,6 @@
             </li><!-- End Sales Nav -->
 
             <li class="nav-heading">Pages</li>
-
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="pages-login.html">
-                    <i class="bi bi-box-arrow-in-left"></i>
-                    <span>Log out</span>
-                </a>
-            </li><!-- End Login Page Nav -->
         </ul>
     </aside><!-- End Sidebar-->
 
