--- a/TheFoodHubMVC/Views/Shared/_LayoutDashboard.cshtml
+++ b/TheFoodHubMVC/Views/Shared/_LayoutDashboard.cshtml
@@ -121,7 +121,7 @@
                         </a>
                     </li>
                     <li>
-                        <a asp-controller="ProductStocks" asp-action="Index">
+                        <a asp-controller="Stocks" asp-action="Index">
                             <i class="bi bi-basket-fill"></i><span>Load Stock</span>
                         </a>
                     </li>
