--- a/TheFoodHubMVC/Views/AllProducts/Index.cshtml
+++ b/TheFoodHubMVC/Views/AllProducts/Index.cshtml
@@ -66,7 +66,7 @@
                 @Html.DisplayFor(modelItem => item.StatusId)
             </td>*@
             <td>
-                @Html.DisplayFor(modelItem => item.ProductPicture)
+                <img src="@Html.DisplayFor(modelItem => item.ProductPicture)" style="width:50px; height:50px;">      
             </td>
             <td>
 
