--- a/TheFoodHubMVC/Views/Status/Create.cshtml
+++ b/TheFoodHubMVC/Views/Status/Create.cshtml
@@ -1,13 +1,22 @@
 ﻿@model TheFoodHubMVC.Models.Status
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create New Status"; 
+    Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
 }
 
-<h1>Create</h1>
+<main id="main" class="main">
+    <div class="pagetitle">
+        <h1>Create Status</h1>
+        <nav>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Index">Home</a></li>
+                <li class="breadcrumb-item active">Create Status</li>
+            </ol>
+        </nav>
+    </div><!-- End Page Title -->
 
-<h4>Status</h4>
-<hr />
+    <section class="section profile">
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -27,6 +36,10 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
+</section>
+</main>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
