--- a/TheFoodHubMVC/Views/Role/Index.cshtml
+++ b/TheFoodHubMVC/Views/Role/Index.cshtml
@@ -1,9 +1,24 @@
 ﻿@model IEnumerable<Microsoft.AspNetCore.Identity.IdentityRole>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Roles";
+    Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
+
 }
-<h1>List of Roles</h1>
-<a asp-action="Create">Create</a>
+<main id="main" class="main">
+
+    <div class="pagetitle">
+        <h1>Roles</h1>
+        <nav>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Index">Home</a></li>
+                <li class="breadcrumb-item active">Roles</li>
+            </ol>
+        </nav>
+    </div><!-- End Page Title -->
+
+    <section class="section dashboard">
+        <div class="row">
+<a asp-action="Create">Create New Role</a>
 <table class="table table-striped table-bordered">
     <thead>
         <tr>
@@ -21,3 +36,7 @@
         }
     </tbody>
 </table>
+</div>
+   </section>
+
+</main><!-- End #main -->
