--- a/TheFoodHubMVC/Views/Shared/_LayoutDashboard.cshtml
+++ b/TheFoodHubMVC/Views/Shared/_LayoutDashboard.cshtml
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/TheFoodHubMVC.styles.css" asp-append-version="true" />
-    <!-- Favicons -->
+@*    <!-- Favicons -->
     <link href="~/assets/img/favicon.png" rel="icon">
-    <link href="~/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="~/assets/img/apple-touch-icon.png" rel="apple-touch-icon">*@
 
     <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
@@ -88,8 +88,8 @@
                 </a>
                 <ul id="components-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
                     <li>
-                        <a asp-controller="" asp-action="">
-                            <i class="bi bi-person-add"></i><span>Add New Staff</span>
+                        <a asp-page="/Account/Register">
+                            <i class="bi bi-cart-plus"></i><span>Add New Staff</span>
                         </a>
                     </li>
                     <li>
@@ -146,7 +146,24 @@
                 </ul>
             </li><!-- End Sales Nav -->
 
-            <li class="nav-heading">Pages</li>
+            <li class="nav-item">
+                <a class="nav-link collapsed" data-bs-target="#components-nav3" data-bs-toggle="collapse" href="#">
+                    <i class="bi bi-bar-chart"></i><span>Settings</span><i class="bi bi-chevron-down ms-auto"></i>
+                </a>
+                <ul id="components-nav3" class="nav-content collapse" data-bs-parent="#sidebar-nav">
+                    
+                    <li>
+                        <a asp-controller="Role" asp-action="Index">
+                            <i class="bi bi-book"></i><span>Roles</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a asp-controller="Status" asp-action="Index">
+                            <i class="bi bi-book"></i><span>Status</span>
+                        </a>
+                    </li>
+                </ul>
+            </li><!-- End Sales Nav -->
         </ul>
     </aside><!-- End Sidebar-->
 
