--- a/TheFoodHubMVC/Views/Status/Details.cshtml
+++ b/TheFoodHubMVC/Views/Status/Details.cshtml
@@ -1,14 +1,22 @@
 ﻿@model TheFoodHubMVC.Models.Status
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Details"; 
+    Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
 }
 
-<h1>Details</h1>
+<main id="main" class="main">
+    <div class="pagetitle">
+        <h1>Status Details</h1>
+        <nav>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Index">Home</a></li>
+                <li class="breadcrumb-item active">Status Details</li>
+            </ol>
+        </nav>
+    </div><!-- End Page Title -->
 
-<div>
-    <h4>Status</h4>
-    <hr />
+    <section class="section profile">
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.StatusName)
@@ -17,8 +25,11 @@
             @Html.DisplayFor(model => model.StatusName)
         </dd>
     </dl>
-</div>
+
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.StatusId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+
+ </section>
+</main>
