--- a/TheFoodHubMVC/Views/Shared/_LayoutDashboard.cshtml
+++ b/TheFoodHubMVC/Views/Shared/_LayoutDashboard.cshtml
@@ -60,7 +60,7 @@
 
           <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
             <i class="bi bi-cart"></i>
-            <span class="badge bg-primary badge-number">4</span>
+            <span class="badge bg-primary badge-number">0</span>
           </a><!-- End Notification Icon -->
         </li><!-- End Notification Nav -->
 
@@ -88,7 +88,7 @@
                 </a>
                 <ul id="components-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
                     <li>
-                        <a asp-page="/Account/Register">
+                        <a asp-area="Identity" asp-page="/Account/Register">
                             <i class="bi bi-cart-plus"></i><span>Add New Staff</span>
                         </a>
                     </li>
