--- a/TheFoodHubMVC/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/TheFoodHubMVC/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -1,10 +1,20 @@
 ﻿@page
 @model AccessDeniedModel
 @{
-    ViewData["Title"] = "Access denied";
+    ViewData["Title"] = "Access Denied";
+    Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
 }
 
-<header>
+<main id="main" class="main">
+    <div class="pagetitle">
+        <h1>Access Denied</h1>
+       
+    </div><!-- End Page Title -->
+
+    <section class="section profile">
+
     <h1 class="text-danger">@ViewData["Title"]</h1>
     <p class="text-danger">You do not have access to this resource.</p>
-</header>
+
+    </section>
+</main>
