--- a/TheFoodHubMVC/Views/Dashboard/Index.cshtml
+++ b/TheFoodHubMVC/Views/Dashboard/Index.cshtml
@@ -1,9 +1,15 @@
-﻿@*
+﻿@using TheFoodHubMVC.Controllers
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+@*@model IEnumerable<TheFoodHubMVC.Controllers.DashboardData>*@
 @{
     ViewBag.Title = "Dashboard";
     Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
+    var staffs = TempData["staffcount"];
+    var categorycount = TempData["categorycount"];
+    var allproduct = TempData["allproduct"];
+
 }
 <main id="main" class="main">
 
@@ -35,7 +41,8 @@
                                         <i class="bi bi-people"></i>
                                     </div>
                                     <div class="ps-3">
-                                        <h6>3</h6>
+                                        
+                                        <h6>@staffs</h6>
                                     </div>
                                 </div>
                             </div>
@@ -52,7 +59,7 @@
                                         <i class="bi bi-building"></i>
                                     </div>
                                     <div class="ps-3">
-                                        <h6>8</h6>
+                                        <h6>@categorycount</h6>
                                     </div>
                                 </div>
                             </div>
@@ -69,7 +76,7 @@
                                         <i class="bi bi-archive"></i>
                                     </div>
                                     <div class="ps-3">
-                                        <h6>3</h6>
+                                        <h6>@allproduct</h6>
                                     </div>
                                 </div>
                             </div>
