--- a/TheFoodHubMVC/Views/Shared/_Layout.cshtml
+++ b/TheFoodHubMVC/Views/Shared/_Layout.cshtml
@@ -15,13 +15,16 @@
         <div class="HeaderWrapper">
             <a asp-area="" asp-controller="Home" asp-action="Index" class="logo">TheFoodHub </a>
             <div class="navbar">
-                <a class="active" href="#home">
+                <a class="active" asp-area="" asp-controller="Home" asp-action="Index">
                     Home
                 </a>
-                <a href="#dishes">Dishes</a>
+
                 <a href="#about">About</a>
-                <a href="#menu">Menu</a>
-                
+
+                <a href="#categories">Categories</a>
+
+                <a asp-controller="Shop" asp-action="Index">Shop</a>
+  
                 <a asp-area="Identity" asp-page="/Account/Login">Login</a>
             </div>
         </div>
