--- a/TheFoodHubMVC/Views/AllProducts/Delete.cshtml
+++ b/TheFoodHubMVC/Views/AllProducts/Delete.cshtml
@@ -3,13 +3,18 @@
 @{
     ViewData["Title"] = "Delete";
 }
+<main id="main" class="main">
+    <div class="pagetitle">
+        <h1>Delete Product</h1>
+        <nav>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Index">Home</a></li>
+                <li class="breadcrumb-item active">Delete Product</li>
+            </ol>
+        </nav>
+    </div><!-- End Page Title -->
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>AllProducts</h4>
-    <hr />
+    <section class="section profile">
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CategoryId)
@@ -55,3 +60,8 @@
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
+
+
+
+    </section>
+</main>
