--- a/TheFoodHubMVC/Views/AllProducts/Details.cshtml
+++ b/TheFoodHubMVC/Views/AllProducts/Details.cshtml
@@ -2,20 +2,23 @@
 
 @{
     ViewData["Title"] = "Details";
+    Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
+    var categories = (List<ProductCategory>)ViewData["Categories"];
+    var statuses = (List<Status>)ViewData["Statuses"];
 }
+<main id="main" class="main">
+    <div class="pagetitle">
+        <h1>Product Details</h1>
+        <nav>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Index">Home</a></li>
+                <li class="breadcrumb-item active">Product Details</li>
+            </ol>
+        </nav>
+    </div><!-- End Page Title -->
 
-<h1>Details</h1>
-
-<div>
-    <h4>AllProducts</h4>
-    <hr />
+    <section class="section profile">
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CategoryId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CategoryId)
-        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ProductName)
         </dt>
@@ -47,8 +50,11 @@
             @Html.DisplayFor(model => model.ProductPicture)
         </dd>
     </dl>
-</div>
+
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.ProductId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+
+    </section>
+</main>
