--- a/TheFoodHubMVC/Views/AllProducts/Edit.cshtml
+++ b/TheFoodHubMVC/Views/AllProducts/Edit.cshtml
@@ -1,21 +1,36 @@
 ﻿@model TheFoodHubMVC.Models.AllProducts
-
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit"; 
+    Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
+    var categories = (List<ProductCategory>)ViewData["Categories"];
+    var statuses = (List<Status>)ViewData["Statuses"];
 }
+<main id="main" class="main">
+    <div class="pagetitle">
+        <h1>Edit Product</h1>
+        <nav>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Index">Home</a></li>
+                <li class="breadcrumb-item active">Edit Product</li>
+            </ol>
+        </nav>
+    </div><!-- End Page Title -->
 
-<h1>Edit</h1>
-
-<h4>AllProducts</h4>
-<hr />
+    <section class="section profile">
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ProductId" />
-            <div class="form-group">
+            <input type="hidden" asp-for="Quantity" />
+            @*<div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
                 <input asp-for="CategoryId" class="form-control" />
+                <span asp-validation-for="CategoryId" class="text-danger"></span>
+            </div>*@
+            <div class="form-group">
+                <label class="control-label">Category</label>
+                <select asp-for="CategoryId" class="form-control" asp-items='new SelectList(categories, "CategoryId","CategoryName")'></select>
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -28,14 +43,14 @@
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Quantity" class="control-label"></label>
-                <input asp-for="Quantity" class="form-control" />
-                <span asp-validation-for="Quantity" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="StatusId" class="control-label"></label>
                 <input asp-for="StatusId" class="form-control" />
+                <span asp-validation-for="StatusId" class="text-danger"></span>
+            </div>*@
+            <div class="form-group">
+                <label class="control-label">Status</label>
+                <select asp-for="StatusId" class="form-control" asp-items='new SelectList(statuses, "StatusId","StatusName")'></select>
                 <span asp-validation-for="StatusId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -43,7 +58,8 @@
                 <input asp-for="ProductPicture" class="form-control" />
                 <span asp-validation-for="ProductPicture" class="text-danger"></span>
             </div>
-            <div class="form-group">
+
+            <div class="form-group" style="margin-top:20px; margin-bottom:20px;">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
@@ -54,3 +70,5 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+    </section>
+</main>
