--- a/TheFoodHubMVC/Views/Dashboard/Index.cshtml
+++ b/TheFoodHubMVC/Views/Dashboard/Index.cshtml
@@ -9,7 +9,6 @@
     var staffs = TempData["staffcount"];
     var categorycount = TempData["categorycount"];
     var allproduct = TempData["allproduct"];
-
 }
 <main id="main" class="main">
 
@@ -86,7 +85,7 @@
                     <div class="col-xxl-4 col-md-6">
                         <div class="card info-card revenue-card">
                             <div class="card-body">
-                                <h5 class="card-title">Total Orders</h5>
+                                <h5 class="card-title">Pending Orders</h5>
 
                                 <div class="d-flex align-items-center">
                                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
@@ -109,10 +108,10 @@
                                 <table class="table table-borderless datatable">
                                     <thead>
                                         <tr>
-                                            <th scope="col">#</th>
-                                            <th scope="col">Customer</th>
-                                            <th scope="col">Product</th>
-                                            <th scope="col">Price</th>
+                                            <th scope="col">SN</th>
+                                            <th scope="col">Customer Name</th>
+                                            <th scope="col">Order No</th>
+                                            <th scope="col">Total</th>
                                             <th scope="col">Status</th>
                                         </tr>
                                     </thead>
@@ -121,35 +120,35 @@
                                             <th scope="row"><a href="#">#2457</a></th>
                                             <td>Brandon Jacob</td>
                                             <td><a href="#" class="text-primary">At praesentium minu</a></td>
-                                            <td>$64</td>
+                                            <td>₦ 64,000</td>
                                             <td><span class="badge bg-success">Approved</span></td>
                                         </tr>
                                         <tr>
                                             <th scope="row"><a href="#">#2147</a></th>
                                             <td>Bridie Kessler</td>
                                             <td><a href="#" class="text-primary">Blanditiis dolor omnis similique</a></td>
-                                            <td>$47</td>
+                                            <td>₦ 47,000</td>
                                             <td><span class="badge bg-warning">Pending</span></td>
                                         </tr>
                                         <tr>
                                             <th scope="row"><a href="#">#2049</a></th>
                                             <td>Ashleigh Langosh</td>
                                             <td><a href="#" class="text-primary">At recusandae consectetur</a></td>
-                                            <td>$147</td>
+                                            <td>₦ 14,700</td>
                                             <td><span class="badge bg-success">Approved</span></td>
                                         </tr>
                                         <tr>
                                             <th scope="row"><a href="#">#2644</a></th>
                                             <td>Angus Grady</td>
                                             <td><a href="#" class="text-primar">Ut voluptatem id earum et</a></td>
-                                            <td>$67</td>
+                                            <td>₦ 63,000</td>
                                             <td><span class="badge bg-danger">Rejected</span></td>
                                         </tr>
                                         <tr>
                                             <th scope="row"><a href="#">#2644</a></th>
                                             <td>Raheem Lehner</td>
                                             <td><a href="#" class="text-primary">Sunt similique distinctio</a></td>
-                                            <td>$165</td>
+                                            <td>₦ 165,000</td>
                                             <td><span class="badge bg-success">Approved</span></td>
                                         </tr>
                                     </tbody>
